Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 body {
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
   margin: 0;
   padding: 0;
   background: linear-gradient(
@@ -17,7 +17,6 @@ body {
 
 #app {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,10 +24,8 @@ body {
 }
 
 header {
-  position: absolute;
-  width: 50%;
-  transform: translateX(50%);
-  top: 10%;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
 }
 
 h1.header {
